<resources>
    <string name="app_name">Mobile Math Calculator</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="str7">7</string>
    <string name="str8">8</string>
    <string name="str9">9</string>
    <string name="str4">4</string>
    <string name="str5">5</string>
    <string name="str6">6</string>
    <string name="str1">1</string>
    <string name="str2">2</string>
    <string name="str3">3</string>
    <string name="str0">0</string>
    <string name="strDecimal">.</string>
    <string name="strEquals">=</string>
    <string name="strMultiply">*</string>
    <string name="strDivide">/</string>
    <string name="strPlus">+</string>
    <string name="strMinus">-</string>
    <string name="strClearAll">C</string>
    <string name="strRemove"><![CDATA[<]]></string>
</resources>
