<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/relativeLayout">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tableLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tableRow0"
            android:padding="5dp">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtTxtDisplay"
                android:enabled="true"
                android:clickable="false"
                android:layout_span="3"
                android:editable="false"
                android:padding="5dp"
                android:nestedScrollingEnabled="false"
                android:singleLine="true"
                android:textIsSelectable="true"
                android:textSize="23dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tableRow1"
            android:gravity="right"
            android:weightSum="20"
            android:padding="5dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strClearAll"
                android:id="@+id/btnClearAll"
                android:layout_weight="1"
                android:layout_span="1"
                android:padding="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strRemove"
                android:id="@+id/btnRemove"
                android:layout_weight="1"
                android:layout_span="1"
                android:padding="5dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tableRow2"
            android:gravity="center_horizontal"
            android:padding="5dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str7"
                android:id="@+id/btn7"
                android:layout_weight="1"
                android:layout_column="0"
                android:padding="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str8"
                android:id="@+id/btn8"
                android:layout_weight="1"
                android:padding="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str9"
                android:id="@+id/btn9"
                android:layout_weight="1"
                android:padding="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strMultiply"
                android:id="@+id/btnMultiply"
                android:layout_weight="1"
                android:padding="5dp"
                android:enabled="false" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tableRow3"
            android:gravity="center_horizontal"
            android:padding="5dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str4"
                android:id="@+id/btn4"
                android:layout_weight="1"
                android:layout_column="0"
                android:padding="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str5"
                android:id="@+id/btn5"
                android:layout_weight="1"
                android:padding="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str6"
                android:id="@+id/btn6"
                android:layout_weight="1"
                android:padding="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strDivide"
                android:id="@+id/btnDivide"
                android:layout_weight="1"
                android:padding="5dp"
                android:enabled="false" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tableRow4"
            android:gravity="center_horizontal"
            android:padding="5dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str1"
                android:id="@+id/btn1"
                android:layout_weight="1"
                android:layout_column="0"
                android:padding="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str2"
                android:id="@+id/btn2"
                android:layout_weight="1"
                android:padding="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str3"
                android:id="@+id/btn3"
                android:layout_weight="1"
                android:padding="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strPlus"
                android:id="@+id/btnPlus"
                android:layout_weight="1"
                android:padding="5dp"
                android:enabled="false" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tableRow5"
            android:gravity="center_horizontal"
            android:padding="5dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str0"
                android:id="@+id/btn0"
                android:layout_weight="10"
                android:padding="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strDecimal"
                android:id="@+id/btnDecimal"
                android:layout_weight="1"
                android:padding="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strMinus"
                android:id="@+id/btnMinus"
                android:layout_weight="1"
                android:padding="5dp"
                android:enabled="true" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tableRow6"
            android:gravity="center_horizontal"
            android:padding="5dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strEquals"
                android:id="@+id/btnEquals"
                android:layout_span="4"
                android:padding="5dp"
                android:enabled="false" />
        </TableRow>

    </TableLayout>
</RelativeLayout>
